[package]
name = "hello-rusttiny85"
version = "0.1.0"
edition = "2021"

[[bin]]
name="hello-rusttiny85"

[dependencies]
panic-halt = "1.0.0"
embedded-hal = "1.0.0"

[dependencies.avr-device]
version = "0.7.0"
features=["attiny85","rt"]

[dependencies.attiny-hal]
git = "https://github.com/Rahix/avr-hal"
features=["attiny85"]


[profile.release]
panic = "abort"

[profile.dev]
panic="abort"


