[package]
name = "hello-rusttiny85"
version = "0.1.0"
edition = "2021"

[[bin]]
name="hello-rusttiny85"

[dependencies]
panic-halt = "1.0.0"
embedded-hal = "1.0.0"

[dependencies.avr-device]
version = "0.7.0"
features=["attiny85","rt"]

[dependencies.attiny-hal]
git = "https://github.com/Rahix/avr-hal"
features=["attiny85"]


[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
debug = false

[profile.dev]
panic ="abort"
opt-level = 3


